# ZeroMQ

./:  .gitattributes  .gitattributes  README.md
zmq-cpp-nodes/zmq-publisher-node/src/: hwpublisher.cpp
zmq-publisher-node/: CMakeLists.txt
zmq_examples_nodes/zmq_client/: zmq_client.sln
zmq_examples_nodes/zmq_client/x64/Debug/: zmq_client.ilk
zmq_examples_nodes/zmq_client/zmq_client/: main.cpp
zmq_examples_nodes/zmq_publisher/: zmq_publisher.sln
zmq_examples_nodes/zmq_publisher/zmq_publisher/: main.cpp
zmq_examples_nodes/zmq_server/: zmq_server.sln
zmq_examples_nodes/zmq_server/x64/Debug/: zmq_server.ilk
zmq_examples_nodes/zmq_server/zmq_server/: main.cpp
zmq_examples_nodes/zmq_server/zmq_server/Debug/: vc140.idb
zmq_examples_nodes/zmq_subscriber/zmq_subscriber/: main.cpp
zmq_matlab_binding/: LICENSE.txt  config_win.m
zmq_matlab_binding/lib/+zmq/+core/: bind.mexa64  bind.mexw64  close.mexa64  close.mexw64  connect.mexa64  connect.mexw64  ctx_get.mexa64  ctx_get.mexw64  ctx_new.mexa64  ctx_new.mexw64  ctx_set.mexa64  ctx_set.mexw64  ctx_shutdown.mexa64  ctx_shutdown.mexw64  ctx_term.mexa64  ctx_term.mexw64  disconnect.mexa64  recv.mexa64  (+14 more)
zmq_matlab_examples/: publisher.m  publisher.m~
zmq_ubuntu/zmq-publisher-node/: CMakeLists.txt  Dockerfile
zmq_ubuntu/zmq_subscriber_node/src/: hwpublisher.cpp
zmq_ubuntu_examples/zmq_publisher/src/: datapoints.cpp
zmq_ubuntu_examples/zmq_subscriber/: main.cpp
zmq_windows/zmq_server_node/zmq_server/: zmq_server.vcxproj
zmq_windows/zmq_subscriber_node/: zmq_subscriber.sln
zmq_windows/zmq_subscriber_node/zmq_subscriber/: zmq_subscriber.vcxproj
zmq_windows_examples/zmq_client/zmq_client/: main.cpp  zmq_client.vcxproj
zmq_windows_examples/zmq_publisher/zmq_publisher/: main.cpp  zmq_publisher.vcxproj
zmq_windows_examples/zmq_server/zmq_server/: main.cpp
zmq_windows_examples/zmq_subscriber/zmq_subscriber/: main.cpp
(+48 files in other folders)
